remove rds references
